# my-homelab

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .sops.yaml  .yamllint.yml  AGENTS.md  MKDOCS_MIGRATION_PLAN.md  README.md  crds.yaml  debug.sh  file.sh  fix.sh  install.yaml  install_armhf.yaml  install_x86.yaml  install_x86_64.yaml  mkdocs.yml  non-crds.yaml  pyproject.toml  qa.sh  renovate.json  update-manifests.sh  validate.sh
.github/: copilot-instructions.md
.github/prompts/: audit.prompt.md
.github/workflows/: build.yml  ci.merge.yml  ci.yml  ci_push.yml  docs.yml  linting.yml  merge.yml  push.yml
argocd/: application.yaml  argocd-cm-patch.yaml  configmap.yaml  delete_argo.sh  deployment.yaml  ingress-route.yaml  kickstart.sh  kustomization.yaml  presync-hook.yaml  presync-rbac.yaml  server-patch.yaml  update-argo-manifests.sh
argocd/app/: application.yaml  argo-non-crds.yaml  configmap.yaml  deployment.yaml  ingress-route.yaml  (+2 more)
base/: env.yaml  env_variables_patch.yaml  ingress-route.yaml  kustomization.yaml  namespace.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  pvc.yaml  storage.yaml  storageclass.yaml  volumes_patch.yaml
bootstrap/: bootstrap.sh
docs/: index.md
overlays/: kustomization.yaml
scripts/: bootstrap.sh  delete_deployment.sh  deploy.sh  encrypt-secrets.sh  kickstart.sh  nuke.sh  qa.sh  seal-secrets.sh  update-manifests.sh  validate.sh
site/: 404.html  index.html  sitemap.xml
terraform/: README.md  main.tf  providers.tf  terraform.tfvars.example  versions.tf
(+388 files in other folders)
